Fixes/1388 (#1434)
* Upon further, >= was needed

* Fix scrollbar issue introduced by Chrome 114

Authored-by: Brian Lambert <brianlambert@gmail.com>

--- a/src/vs/workbench/contrib/positronConsole/browser/components/consoleInstance.css
+++ b/src/vs/workbench/contrib/positronConsole/browser/components/consoleInstance.css
@@ -7,7 +7,8 @@
 	cursor: default;
 	padding-left: 10px;
 	position: absolute;
-	overflow-y: overlay;
+	/* As of Chrome 114, overflow: overlay is no longer an option. So, use auto. */
+	overflow-y: auto;
 
 	/* Selection */
 	user-select: text;
